added tech icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,10 @@
   <h1>Hey, it's</h1>
   <p>Bernadette</p>
   <h2>Back-End Developer</h2>
+  <div class="social-container">
+    <div id="githubImg" title="GitHub" (click)="openGitHub()"></div>
+    <div id="linkedinImg" title="LinkedIn" (click)="openLinkedIn()"></div>
+  </div>
 </div>
 <div class="summary">
   <p>It’s a pleasure having you here!<br><br>
@@ -15,6 +19,20 @@
 </div>
 <div class="toolbox">
   <h2>my toolbox</h2>
+  <div class="toolbox-container">
+    <div id="html5Img" title="HTML5"></div>
+    <div id="css3Img" title="CSS3"></div>
+    <div id="jscriptImg" title="Javascript"></div>
+    <div id="phpImg" title="PHP"></div>
+    <div id="pythonImg" title="Python"></div>
+    <div id="gitImg" title="Git"></div>
+    <div id="javaImg" title="Java"></div>
+    <div id="csharpImg" title="C#"></div>
+    <div id="djangoImg" title="Django"></div>
+    <div id="angularImg" title="Angular"></div>
+    <div id="dotnetImg" title=".NETCore"></div>
+    <div id="sqlserverImg" title="SQL Server"></div>
+  </div>
 </div>
 </main>
 
