added installed in-memory web api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="welcome">
   <h1>Hey, it's</h1>
   <p>Bernadette</p>
-  <h2>Back-End Developer</h2>
+  <h2>Software Developer</h2>
   <div class="social-container">
     <div id="githubImg" title="GitHub" (click)="openGitHub()"></div>
     <div id="linkedinImg" title="LinkedIn" (click)="openLinkedIn()"></div>
@@ -10,8 +10,8 @@
 </div>
 <div class="summary">
   <p>It’s a pleasure having you here!<br><br>
-    My name is Bernadette, your friendly back-end developer. One simple spark of interest from a pregnant physics professor has evolved into a passion that I haven't stopped chasing since. Currently a student at LaSalle College in Montreal, pursuing my Programmer Analyst diploma, my mission is to turn my creative problem solving skills as a career.</p>
-  <button>View My CV</button>
+    My name is Bernadette, your friendly software developer. One simple spark of interest from a pregnant physics professor has evolved into a passion that I haven't stopped chasing since. Currently a student at LaSalle College in Montreal, pursuing my Programmer Analyst diploma, my mission is to turn my creative problem solving skills as a career.</p>
+  <button id="viewCV" (click)="openCV()">View My CV</button>
   </div>
 <div class="projects">
   <h2>Featured Projects</h2>
