--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -110,3 +110,14 @@ p
 .social-container
     display: flex
     gap: 2em
+
+#viewCV
+    background-color: #1572B6
+    border: none
+    color: #EBEBEB
+    font-size: 0.8rem
+    padding: 8px 30px
+    font-weight: bold
+    border-radius: 30px
+    &:hover
+        cursor: pointer
