--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,15 @@
   </div>
 <div class="projects">
   <h2>Featured Projects</h2>
-  <div class="project-list"></div>
+  <div class="project-list">
+    <ul class="projects">
+      <li *ngFor="let project of projects">
+        <h3><a href="{{project.link}}" target="_blank">{{project.name}}</a></h3>
+        <span class="language">{{project.lang}}</span>
+        <span class="description">{{project.desc}}</span>
+      </li>
+    </ul>
+  </div>
 </div>
 <div class="toolbox">
   <h2>my toolbox</h2>
