--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -7,7 +7,7 @@ main
     font-size: 10px
     display: grid
     grid-template-columns: 1fr 1fr
-    grid-template-rows: 1fr 1fr
+    grid-template-rows: 55vh 45vh
     grid-template-areas: "welcome projects" "summary toolbox"
 
 .welcome
@@ -21,9 +21,17 @@ main
 
 .projects
     grid-area: projects
+    overflow-y: scroll
+    &::-webkit-scrollbar
+        width: 0
+        background: transparent
     h2
         font-weight: bold
         margin-top: 0
+        position: -webkit-sticky
+        position: sticky
+        top: 0
+        background-color: white
 
 .summary
     grid-area: summary
@@ -53,7 +61,7 @@ p
     justify-content: space-evenly
     row-gap: 3em
     div
-        flex-basis: 20%
+        flex-basis: 15%
         width:6em
         height:6em
 
@@ -121,3 +129,24 @@ p
     border-radius: 30px
     &:hover
         cursor: pointer
+
+.projects-list-items
+    list-style: none
+    margin: 0
+    padding: 0
+    font: 1rem $font-text
+    h3
+        margin: 0
+        padding: 0
+    a  
+        text-decoration: none
+        color: #1572B6
+    .language
+        font-style: italic
+
+.description
+    display: inline-block
+    padding-top: 5px
+
+.projects-list-item
+    margin-bottom: 20px
