--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,15 @@
 <main class="main">
 <div class="welcome">
-  <h1>Hey, it's</h1>
-  <p>Bernadette</p>
-  <h2>Software Developer</h2>
-  <div class="social-container">
-    <div id="githubImg" title="GitHub" (click)="openGitHub()"></div>
-    <div id="linkedinImg" title="LinkedIn" (click)="openLinkedIn()"></div>
+  <div class="welcome-details">
+    <h1>Hey, it's</h1>
+    <p>Bernadette</p>
+    <h2>Software Developer</h2>
+    <div class="social-container">
+      <div id="githubImg" title="GitHub" (click)="openGitHub()"></div>
+      <div id="linkedinImg" title="LinkedIn" (click)="openLinkedIn()"></div>
+    </div>
   </div>
+  <div id="portfolioImg"></div>
 </div>
 <div class="summary">
   <p>It’s a pleasure having you here!<br><br>
