updated assests path

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -75,55 +75,55 @@ p
 
 #portfolioImg
     width:100%
-    height:auto
-    background: url(../assets/images/girl.svg) no-repeat center
+    height:100%
+    background: url(../assets/girl.svg) no-repeat center
     background-size: contain
 
 #html5Img
-    background: url(../assets/images/html5.svg) no-repeat center
+    background: url(../assets/html5.svg) no-repeat center
 
 #css3Img
-    background: url(../assets/images/css3.svg) no-repeat center
+    background: url(../assets/css3.svg) no-repeat center
 
 #jscriptImg
-    background: url(../assets/images/javascript.svg) no-repeat center
+    background: url(../assets/javascript.svg) no-repeat center
 
 #phpImg
-    background: url(../assets/images/php.svg) no-repeat center
+    background: url(../assets/php.svg) no-repeat center
 
 #pythonImg
-    background: url(../assets/images/python.svg) no-repeat center
+    background: url(../assets/python.svg) no-repeat center
 
 #gitImg
-    background: url(../assets/images/git.svg) no-repeat center
+    background: url(../assets/git.svg) no-repeat center
 
 #javaImg
-    background: url(../assets/images/java.svg) no-repeat center
+    background: url(../assets/java.svg) no-repeat center
 
 #csharpImg
-    background: url(../assets/images/csharp.svg) no-repeat center
+    background: url(../assets/csharp.svg) no-repeat center
 
 #djangoImg
-    background: url(../assets/images/django.svg) no-repeat center
+    background: url(../assets/django.svg) no-repeat center
 
 #angularImg
-    background: url(../assets/images/angularjs.svg) no-repeat center
+    background: url(../assets/angularjs.svg) no-repeat center
 
 #dotnetImg
-    background: url(../assets/images/dotnetcore.svg) no-repeat center
+    background: url(../assets/dotnetcore.svg) no-repeat center
 
 #sqlserverImg
-    background: url(../assets/images/microsoftsqlserver.svg) no-repeat center
+    background: url(../assets/microsoftsqlserver.svg) no-repeat center
 
 #githubImg
-    background: url(../assets/images/github.svg) no-repeat center
+    background: url(../assets/github.svg) no-repeat center
     width:3em
     height:3em
     &:hover
         cursor: pointer
 
 #linkedinImg
-    background: url(../assets/images/linkedin.svg) no-repeat center
+    background: url(../assets/linkedin.svg) no-repeat center
     width:3em
     height:3em
     &:hover
